--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewMessage"></activity>
+        <activity android:name=".SendMessage"></activity>
+        <activity android:name=".NewMessage" />
         <activity android:name=".DefinedMessagesActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
