--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
     defaultConfig {
         applicationId "br.pro.hashi.ensino.desagil.projeto1"
         minSdkVersion 28
+        //noinspection OldTargetApi,OldTargetApi
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
