--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CharToMorse"></activity>
+        <activity android:name=".MorseToChar"/>
+        <activity android:name=".CharToMorse" />
         <activity android:name=".SendMessage" />
         <activity android:name=".NewMessage" />
         <activity android:name=".DefinedMessagesActivity" />
